# sciona

./: .gitignore  ADDONS.md  AGENTS.md  ARCHITECTURE.md  CONTRACTS.md  COREDEVGUIDE.md  DEVELOPER.md  LICENSE  Makefile  README.md  REDUCERS.md  USERGUIDE.md  __init__.py  code_analysis.json  pyproject.toml  setup.py  version.py
.github/: FUNDING.yml
.github/workflows/: callsite-guardrails.yml  code-analysis-gates.yml  reducer-validation.yml
api/: __init__.py  addons.py  errors.py  plugins.py  prompts.py  reducers.py  repo.py  resolve.py  runtime.py  storage.py  user.py
cli/: __init__.py  errors.py  main.py  prompt.py  reducer.py  refs.py  render.py  resolve.py  search.py  utils.py
cli/commands/: __init__.py  register.py  register_agents.py  register_build.py  register_hooks.py  register_init.py  register_status.py  registry.py
code_analysis/: __init__.py  config.py
code_analysis/analysis/: __init__.py  orderings.py  structural_hash.py
code_analysis/artifacts/: __init__.py  engine.py  rollups.py
code_analysis/core/: __init__.py  engine.py  module_naming.py  routing.py  snapshot.py  structural_assembler.py
code_analysis/tools/: __init__.py  call_extraction.py  discovery.py  excludes.py  git_support.py  profile_introspection.py  snapshots.py  tree_sitter.py  walker.py
data_storage/: __init__.py  connections.py  encoding.py  schema_utils.py  sql_utils.py  transactions.py
data_storage/artifact_db/: __init__.py  connect.py  diff_overlay.py  diff_overlay_calls.py  diff_overlay_summary.py  maintenance.py  maintenance_continuity.py  maintenance_graph.py  read_status.py  schema.py  store.py  store_rollups.py  write_graph.py  write_index.py
data_storage/core_db/: __init__.py  connect.py  errors.py  read_ops.py  schema.py  store.py  write_ops.py
docs/: ADDONS.md  ADDONSAPI.md  ADDONSDEVGUIDE.md  ARCHITECTURE.md  CAPABILITY_MANIFEST.json  CAPABILITY_MATRIX.md  COMPLIANCE_CHECKLIST.md  CONTRACT.md  CONTRACTS.md  DEVELOPERGUIDE.md  LANGUAGE_ADAPTER_ARCHITECTURE.md  PARSER_BOOTSTRAP_POLICY.md  ROLLUP-20260227-code-analysis.md
experiments/: reducer-evaluation-prompt.md
experiments/reducers/: reducer-evaluation-prompt.md  reducer_contracts.yaml  reducer_quality-howto.dm  reducer_quality-howto.md  reducer_quality.py  reducer_validation.md  reducer_validation.py
experiments/reports/: fastapi_reducer_quality_evaluation.json  fastapi_reducer_quality_evaluation.md  nest_reducer_quality_evaluation.md
pipelines/: __init__.py  agents.py  build_artifacts.py  diff_overlay.py  errors.py  hooks.py  progress.py  prompt.py  prompt_validation.py  prompts.py  reducers.py  repo.py  resolve.py  setup.py  snapshot_policy.py  snapshots.py
pipelines/config/: errors.py  io.py  public.py
prompts/: __init__.py  bootstrap.py  compiler.py  registry.py  registry_io.py  registry_state.py  registry_validate.py  specs.py
reducers/: __init__.py  api.py  metadata.py  registry.py
runtime/: __init__.py  addon_api.py  addon_contract.py  addons.py  agents-setup.py  agents.py  agents_setup.py  agents_template.md  api.py  config.py  config_defaults.py  config_io.py  config_models.py  config_parse.py  constants.py  errors.py  git.py  git_adapter.py  git_exec.py  identity.py  logging.py  packaging.py  paths.py  policies.py  repo_state.py  rollback.py  time.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_addon_entrypoints.py  test_addon_import_boundary.py  test_addons_runtime.py  test_agents_generation.py  test_api_surface.py  test_architecture_surfaces.py  test_artifact_db.py  test_artifact_engine.py  test_artifact_rebuild_status.py  test_artifact_rollups_fk.py  test_call_neighborhood.py  test_cli_prompt.py  test_cli_reducer.py  test_cli_refs.py  test_cli_resolve.py  test_cli_search.py  test_cli_utils.py  test_config_preserve.py  test_core_schema_constraints.py  test_db_connect.py  test_diff_overlay.py  test_engine_semantics.py  test_git_validation.py  test_java_analyzer.py  test_latest_snapshot_enforcement.py  test_layer_boundaries.py  test_llm_endpoint_security.py  test_logging_config.py  test_module_naming.py  test_new_reducers.py  test_profile_reducers.py  test_projection_kernels.py  test_prompt_summaries.py  test_prompts_minimal.py  test_prompts_validation.py  test_python_analyzer.py  (+14 more)
validations/: callsite_guardrails.json  check_callsite_guardrails.py
(+1069 files in other folders)
