[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona"
version = "1.0.0"
description = "SCIONA semantic structural index builder"
authors = [{ name = "SCIONA" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9,<1.0",
    "click<9",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "tree_sitter>=0.20,<0.21",
    "tree_sitter_languages>=1.10",
    "networkx>=3.2,<4.0",
]

[project.scripts]
sciona = "sciona.cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["sciona*"]

[tool.setuptools.package-data]
sciona = [
    "prompts/templates/*.md",
    "prompts/templates/registry.yaml",
    "pipelines/templates/*.md",
]
