[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona"
dynamic = ["version"]
description = "SCIONA deterministic structural index builder"
authors = [{ name = "Dmitry Chigrin & MegaScienta" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.9,<1.0",
    "click<9",
    "pyyaml>=6.0",
    "pathspec>=0.12",
    "tree_sitter>=0.20,<0.21",
    "tree_sitter_languages>=1.10",
    "networkx>=3.2,<4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]
docs = []
dev = [
    "pytest>=7",
]
fortran = []
c = []
go = []

[project.scripts]
sciona = "sciona.cli.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
sciona = [
    "runtime/templates/*.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "policy: structural policy and guardrail tests",
]
filterwarnings = [
    "ignore:'BaseCommand' is deprecated and will be removed in Click 9.0.*:DeprecationWarning:typer\\.completion",
    "ignore:The '__version__' attribute is deprecated and will be removed in Click 9.1.*:DeprecationWarning:typer\\._compat_utils",
]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/megascienta/sciona"
Repository = "https://github.com/megascienta/sciona"
Issues = "https://github.com/megascienta/sciona/issues"
